_assets/css/_conference.scss
.conference-session-list {
  display: flex;
  flex-direction: column;
  margin: 50px 30px 80px;

  header {
    position: sticky;
    top: 0;
    margin: 0;
    background-color: white;
    z-index: 100;
    padding: 0 30px;
    margin: 0 -30px;
    transition: all 0.25s;

    &.shadow {
      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }
  }

  .conference-slot {
    display: grid;
    grid-template-columns: auto 1fr;
    column-gap: 30px;
    .conference-slot-inner {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      align-items: start;
      column-gap: 60px;
    }

    .conference-session {
      width: 100%;
      display: grid;
      row-gap: 12px;
      height: -moz-fit-content;
      height: fit-content;

      :first-child:last-child {
        max-width: 65em;
      }

      grid-row: 1;
      &--track-1, &--main {
        grid-column: 1;
      }
      &--track-2 {
        grid-column: 2;
      }
      &--track-3 {
        grid-column: 3;
      }
    }
  }

  .conference-sessions-break {
    margin-top: -4px;
    font-size: 1.4rem;
    color: $primary-text;
    font-weight: 500;
    grid-column: 1 / -1;
  }
}

.conference-slot-info {

  display: flex;
  flex-direction: column;
  align-items: end;

  time {
    text-align: right;
    font-size: inherit;
    font-weight: normal;

    small {
      display: block;
    }
  }
}

hr.custom-hr {
  position: relative;
  content: '';
  border: none;
  border-top: 1px $light-gray solid;
  margin: 30px 0;
  overflow: visible;
  grid-column: 1 / -1;

  &::before {
    position: absolute;
    bottom: -3px;
    left: -6px;
    content: '';
    width: 5px;
    height: 5px;
    border: 1px $light-gray solid;
  }

  &::after {
    position: absolute;
    bottom: -3px;
    right: -6px;
    content: '';
    width: 5px;
    height: 5px;
    border: 1px $light-gray solid;
  }
}

.conference-session {

  .conference-track {
    display: inline-flex;
    align-items: center;
    font-size: 1rem;
    font-weight: bold;
    text-transform: uppercase;
    background-color: $light-gray;
    border-radius: 4px;
    margin-right: 12px;
    height: 1.5rem;
    padding: 4px;
    color: $white;

    &--main {
      display: none;
    }
  }

  .presenter {
    display: grid;
    grid-auto-flow: column;
    column-gap: 12px;
    align-items: center;
    width: -moz-fit-content;
    width: fit-content;
    line-height: 1.2rem;

    .speaker-image {
      width: 36px;
      height: 36px;
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
      box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.2);

      @include border-radius(50%);
    }
  }

  > h3 {
    margin: 0;
    font-size: 1.4rem;
    line-height: 2rem;
  }
}

.speaker {
  .github_handle {
    font-size: 1rem;
    i {
      transform: scale(0.7);
      opacity: 0.6;
      margin-right: -5px;
      margin-top: -3px;
    }
  }
}

.conference-session-info {
  display: flex;
  column-gap: 12px;
  align-items: center;
}

.theme {
  display: flex;
  align-items: center;
  height: 1.2rem;
  border-radius: 0.6rem;
  padding: 0 0.5rem;
  color: $primary-text;
  border: 1px $primary-text solid;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.75rem;
  text-transform: uppercase;
  vertical-align: text-top;
  white-space: nowrap;
}

@media only screen and (max-width: 900px) {

  .conference-session-list {
    header {
      position: unset
    }

    .conference-slot {
      .conference-slot-inner {
        grid-template-columns: 1fr !important;
        row-gap: 60px;
      }
    }
  }
}

